--- a/main.css
+++ b/main.css
@@ -109,8 +109,7 @@ nav ul li a:hover{
 	.cb1{
 		font-size: 12px;
 	}
-
-#song-list{
+.song-list{
 	display: block;
 	margin-right: 5px;
 	border: 3px solid black;
@@ -119,8 +118,7 @@ nav ul li a:hover{
 	padding: 10px 30px;
 
 }
-
-#song-list h1{
+.song-list h1{
 	font-family: "Arial";
 	font-weight: 400;
 	color: #785616;
