--- a/main.css
+++ b/main.css
@@ -10,6 +10,21 @@ body{
 	font-size: 14px;
 }
 
+.visible {
+	display: block;
+	margin-right: 5px;
+	border: 3px solid black;
+	width: 75%;
+	background-color: #FEFAC0;
+	padding: 10px 30px;
+
+}
+
+.hidden {
+  display: none;
+}
+
+
 #wrapper{
 	width: 70%;
 	margin: 0 auto;
@@ -109,15 +124,7 @@ nav ul li a:hover{
 	.cb1{
 		font-size: 12px;
 	}
-.song-list{
-	display: block;
-	margin-right: 5px;
-	border: 3px solid black;
-	width: 75%;
-	background-color: #FEFAC0;
-	padding: 10px 30px;
 
-}
 .song-list h1{
 	font-family: "Arial";
 	font-weight: 400;
